fix: Fixed 'show all tabs' button not showing, b=(closes #8188), c=common

--- a/src/browser/themes/shared/zen-icons/icons.css
+++ b/src/browser/themes/shared/zen-icons/icons.css
@@ -1096,6 +1096,10 @@ menuitem[id='placesContext_new:separator'] {
   --menu-image: url('arrow-up.svg');
 }
 
+#alltabs-button {
+  list-style-image: url("chrome://browser/skin/tabs.svg") !important;
+}
+
 :not(:not(menubar) > menu, #ContentSelectDropdown)
   > menupopup
   > menuitem:not(
