--- a/src/zen/common/styles/zen-single-components.css
+++ b/src/zen/common/styles/zen-single-components.css
@@ -23,10 +23,6 @@
   display: none !important;
 }
 
-#alltabs-button {
-  display: none !important;
-}
-
 .private-browsing-indicator-with-label {
   display: none !important;
 }
